--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-<div class="p-4">
+<div class="col-md-6 offset-md-3 mt-5">
     <div class="container">
         <h1>Hi {{user.firstName}}!</h1>
-        <p>You're logged in with Angular 10!!</p>
-        <p><a routerLink="/users">Manage Users</a></p>
+        <p>You're logged in with {{user.role}} role</p>
     </div>
 </div>
