--- a/src/app/users/layout.component.html
+++ b/src/app/users/layout.component.html
@@ -1,4 +1,4 @@
-<div class="p-4">
+<div class="col-md-6 offset-md-3 mt-5">
     <div class="container">
         <router-outlet></router-outlet>
     </div>
