--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,16 @@
 body {
   margin: 0;
   font-family: sans-serif;
-}
-
-h1 {
-  text-align: center;
+  background-image: url(./assets/image/bg4.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 a { cursor: pointer; }
+
+h1{
+  margin-top: 2%;
+}
 
 .app-container {
     min-height: 320px;
@@ -20,4 +23,14 @@ a { cursor: pointer; }
     width: 40px;
     text-align: center;
     box-sizing: content-box;
+}
+
+.background-img{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.navbar-nav{  
+  margin-left: 10%;
 }
