--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
       <a class="nav-item nav-link" routerLink="/tutorial" routerLinkActive="active">Tutorial</a>
       <a class="nav-item nav-link" routerLink="/api" routerLinkActive="active">API</a>
       <a class="nav-item nav-link" target="_blank" rel="noopener noreferrer"  href="https://github.com/nonyo555/Visualization-Platform">Source</a>   
-      <a class="nav-item nav-link" routerLink="/generate" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Generate</a>
+      <a class="nav-item nav-link" routerLink="/generate" routerLinkActive="active">Generate</a>
   </div>
   <ul class="navbar-nav ml-auto">
     <a class="nav-item nav-link" (click)="logout()">Log out</a>
@@ -37,7 +37,7 @@
 
 
 <!-- main app container -->
-<div class="app-container" [ngClass]="{ 'bg-light': user }">
+<div class="app-container">
   <!--img src="../assets/image/bg.jpeg" class="background-img"-->
   <alert></alert>
   <router-outlet></router-outlet>
