--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -15,7 +15,7 @@
                     <td>{{template.TemplateName}}</td>
                     <td>{{template.status}}</td>
                     <td style="white-space: nowrap">
-                        <a routerLink="detail" class="btn btn-sm btn-primary mr-1" [disabled]="template.status!='active'">Create</a>
+                        <a [routerLink]="['/generate/detail/',template.TemplateName]" class="btn btn-sm btn-primary mr-1" [disabled]="template.status!='active'">Create</a>
                         <!--button (click)="deleteUser(user.id,user.username)" class="btn btn-sm btn-danger btn-delete-user" [disabled]="user.isDeleting">
                     <span *ngIf="user.isDeleting" class="spinner-border spinner-border-sm"></span>
                     <span *ngIf="!user.isDeleting">Delete</span>
@@ -31,31 +31,3 @@
         </table>
     </div>
 </div>
-<!--div class="col-md-6 offset-md-3 mt-5">
-    <div class="card">
-        <h4 class="card-header">Generate Visualization</h4>
-        <div class="card-body">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="customFile">
-                        <label class="custom-file-label" for="customFile">Choose data file</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="custom-file">
-                        <input type="file" class="custom-file-input" id="customFile">
-                        <label class="custom-file-label" for="customFile">Choose config file</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button [disabled]="loading" class="btn btn-primary">
-                        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                        Generate
-                    </button>
-                    <a routerLink="../login" class="btn btn-link">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
-</div-->
