update user route
- combine detail page with generate page
- add stepper
- edit generate page
- edit result page
- add user's visualization table in home page
- minor fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,29 @@
 
 
 <!-- main app container -->
-<div class="app-container">
-  <!--img src="../assets/image/bg.jpeg" class="background-img"-->
+<div class="app-container" style="height: 100vh;">
   <alert></alert>
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer">
+  <div class="container p-3">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <h5 class="text-uppercase text-center" style="font-family: fantasy;">contact us</h5>
+        <p>
+          <i class="fab fa-line"></i>
+          Line : @visualizationplatform</p>
+        <p>
+          <i class="fa fa-phone-square"></i>
+          Phone : 02-222-2222
+        </p>
+        <p>
+          <i class="fa fa-envelope"></i>
+          Email : visualplatform@gmail.com
+        </p>
+      </div>
+    </div>
+    <hr>
+  </div>
+</footer>
