--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,26 +1,12 @@
-body{
-    font-size: 100%;
-}
-
 h1{
-    font-family: "Helvetica Neue", sans-serif;
     font-size: 4em;
     text-align: center;
 }
 
 span{
     font-size: 80%;
-    font-family: "Helvetica Neue", sans-serif;
 }
 
-.custom-text-box{
-    width: 50%;
-    height: 10%;
-    margin-top: 15%;
-    margin-left: 10%;
-    z-index: 10;
-    position: relative;
-}
  
 .button {
     border-radius: 16px;
@@ -33,7 +19,8 @@ span{
     width: 200px;
     transition: all 0.5s;
     cursor: pointer;
-    margin: 5px;
+    margin-top: 3%;
+    margin-bottom: 3%;
   }
   
   .button span {
@@ -62,7 +49,7 @@ span{
   }
 
 mdb-carousel{
-    padding: 3%;
+    
 }
 
 mdb-carousel-item{
