--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,9 @@
-<h1>Visualization Platform</h1>
+<div class="d-flex justify-content-center p-3">
+    <div class="row p-3">
+        <img src="../../assets/image/logo_transparent.png" style="width: 100px; height: 100px;">
+        <h1 style=" margin-left: 20px;">Visualization Platform</h1>
+    </div> 
+</div>
 <div class="col-md-6 offset-md-3 mt-3">
     <!--div class="custom-text-box">
         <h1 style="color: white;">Simply create your own Interactive Visualization</h1>
