--- a/src/app/generate/result.component.html
+++ b/src/app/generate/result.component.html
@@ -1,8 +1,21 @@
+
 <div class="card">
     <h4 class="card-header">
         Result
     </h4>
-    <div class="card-body">
-        <iframe class="e2e-iframe-trusted-src" width="840" height="600" [src]="tryDoctype"></iframe>
+    <div class="card-body" style="height: 70vh;">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="e2e-iframe-trusted-src" [src]="tryDoctype"></iframe>
+        </div>
+        <div class="mt-5 text-center">
+            <a [href]="pptUrl"><button class="btn btn-success" >View Full Size</button></a>
+        </div>
+        <div class="row mt-3 ml-4">
+            <label for="pptUrl">Powerpoint embed URL :</label>
+        </div>
+        <div class="row justify-content-center">
+            <input  id="pptUrl" type="text" class="form-control" [value]="pptUrl" style="width: 80%;" readonly>
+            <button class="btn btn-primary ml-3" [cdkCopyToClipboard]="pptUrl">Copy</button>
+        </div>
     </div>
 </div>
