--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,36 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
+html{
+  position: relative;
+  min-height: 100vh;
+  height: auto;
+  margin: 0;
+}
+
 body {
   margin: 0;
-  font-family: sans-serif;
   background-image: url(./assets/image/bg4.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 200px;
+  -webkit-font-smoothing: antialiased;
+  font-size: .9375rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #343a40;
+  min-height: 100%;
+}
+
+.footer {
+  border-top: 2px solid #F3F0EF ;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 200px;
+  line-height: 16px;
+  background-color: #fff;
+  font-size: .9375rem;
 }
 
 a { cursor: pointer; }
