--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div class="col-md-6 offset-md-3 mt-5">
-    <div class="container">
+    <div class="container mb-5">
         <h1>Hi {{user.firstName}}!</h1>
         <p>You're logged in with {{user.role}} role</p>
 
         <div class="card" *ngIf="role == 'user' ||  role == 'designer'">
             <h4 class="card-header">Your Visualization</h4>
             <div class="card-body">
+                <div class="text-right"><p>You have created : {{count}}/20 Visualizations</p></div>
                 <table class="table table-striped">
                     <thead>
                         <tr>
