--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@
 html{
   position: relative;
   min-height: 100vh;
-  height: auto;
   margin: 0;
 }
 
@@ -18,7 +17,9 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #343a40;
-  min-height: 100%;
+  display: block;
+  overflow: auto;
+  min-height: 100vh;
 }
 
 .footer {
