--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 
 
 <!-- main app container -->
-<div class="app-container">
+<div class="app-container" style="min-height: 100vh;">
   <alert></alert>
   <router-outlet></router-outlet>
 </div>
