--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,10 @@
                                     <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1" ngbDropdownToggle>Manage</button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
                                             <a routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item">Edit</button></a>
-                                            <button class="dropdown-item">Delete</button>
+                                            <button class="dropdown-item" (click)="delete(item.id,item.refId)" [disabled]="item.isDeleting">
+                                                <span *ngIf="item.isDeleting" class="spinner-border spinner-border-sm"></span>
+                                                <span *ngIf="!item.isDeleting">Delete</span>
+                                            </button>
                                             <button class="dropdown-item">Deactivate</button>
                                             <div class="dropdown-divider"></div>
                                             <a class="dropdown-item" href="#">Copy ppt url</a>
